# near-hello-world-rs

./: Cargo.toml  README.md
src/: lib.rs
