[package]
name = "near-rust-helloworld"
version = "0.1.0"
authors = ["Mohammed Hassan <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"

[target.wasm32-unknown-unknown]
rustflags = ["-C", "link-arg=-s"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true